<?xml version="1.0"?>
<package format="2">
  <name>log_test</name>
  <version>0.1.0</version>
  <description>Testing logging during process initialization and shut-down.</description>
  <maintainer email="maarten@de-vri.es">Maarten de Vries</maintainer>
  <license>BSD3</license>
  <author email="maarten@de-vri.es">Maarten de Vries</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
